# ChangeLog for media-sound/mpd
# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/mpd/ChangeLog,v 1.143 2008/12/22 17:37:35 angelos Exp $

  22 Dec 2008; Christoph Mende <angelos@gentoo.org> mpd-0.14_beta3.ebuild:
  Uncomment rm line, was never intended to be commented out

  22 Dec 2008; Christoph Mende <angelos@gentoo.org> mpd-0.14_beta3.ebuild:
  Use use_with instead of myconf for zeroconf

  20 Dec 2008; Christoph Mende <angelos@gentoo.org> mpd-0.14_beta3.ebuild:
  Enable USE=sysvipc by default

*mpd-0.14_beta3 (20 Dec 2008)

  20 Dec 2008; Christoph Mende <angelos@gentoo.org> files/mpdconf1.patch,
  -mpd-0.14_beta2.ebuild, +mpd-0.14_beta3.ebuild:
  Version bump and removed beta2 as mpdconf1.patch changed

*mpd-0.14_beta2 (05 Dec 2008)

  05 Dec 2008; Christoph Mende <angelos@gentoo.org> +files/mpdconf1.patch,
  -files/mpd-0.14_alpha1-loglevel.patch, metadata.xml, -mpd-0.13.0.ebuild,
  -mpd-0.13.1.ebuild, -mpd-0.14_alpha1.ebuild, +mpd-0.14_beta2.ebuild:
  Version bump and removed old

  02 Dec 2008; Brent Baude <ranger@gentoo.org> mpd-0.13.2.ebuild:
  stable ppc64, bug 242128

  01 Dec 2008; Christoph Mende <angelos@gentoo.org> mpd-0.14_beta1.ebuild:
  Removed doc/COMMANDS from dodoc

*mpd-0.14_beta1 (30 Nov 2008)

  30 Nov 2008; Christoph Mende <angelos@gentoo.org> +mpd-0.14_beta1.ebuild:
  Version bump

  14 Nov 2008; Alexis Ballier <aballier@gentoo.org> mpd-0.14_alpha1.ebuild:
  fixup econf call (missing backslash)

  10 Nov 2008; Christoph Mende <angelos@gentoo.org>
  +files/mpd-0.14_alpha1-loglevel.patch, mpd-0.14_alpha1.ebuild:
  Split id3 support from mad support (USE=id3 now) Removed USE=iconv, added
  USE=sysvipc Fixed lame/vorbis/icecast dependencies (bug 246236) Fixed
  warning about icecast enabled without encoders (bug 246232) Fixed
  USE=ffmpeg Removed ChangeLog from dodoc (bug 246238) Fix loglevel (bug
  246207) Thanks to Daniel Schömer <daniel.schoemer@gmx.net> and Avuton