@@ -1,6 +1,6 @@
 # Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/mpd/mpd-0.14_beta3.ebuild,v 1.4 2008/12/22 17:37:35 angelos Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/mpd/mpd-0.14_beta3.ebuild,v 1.5 2008/12/25 10:21:44 angelos Exp $
 
 EAPI=2
 
@@ -118,9 +118,10 @@ src_install() {
 
 	newinitd "${FILESDIR}"/mpd.rc mpd
 
-	use unicode && \
+	if use unicode; then
 		dosed 's:^#filesystem_charset.*$:filesystem_charset "UTF-8":' \
 			/etc/mpd.conf || die "dosed failed"
+	fi
 
 	diropts -m0755 -o mpd -g audio
 	dodir /var/lib/mpd/music
@@ -130,8 +131,9 @@ src_install() {
 	dodir /var/log/mpd
 	keepdir /var/log/mpd
 
-	use alsa && \
+	if use alsa; then
 		dosed 's:need :need alsasound :' /etc/init.d/mpd || die "dosed failed"
+	fi
 }
 
 pkg_postinst() {
